--- a/Java/Java基础/5. 继承.md
+++ b/Java/Java基础/5. 继承.md
@@ -32,7 +32,7 @@ public class 子类名称 extends 父类名称 {
 
 
 
-##### **继承的访问规则**
+### **继承的访问规则**
 
 在父子类的继承关系当中，如果成员变量重名，则创建子类对象时，访问有两种方式：
 
@@ -285,7 +285,7 @@ public class Zi extends Fu {
 
 
 
-##### **抽象类**
+### **抽象类**
 
 抽象方法：就是加上**abstract关键字**，然后去掉大括号，直接分号结束。
 
@@ -331,7 +331,7 @@ public class DemoMain {
 
  
 
-##### **接口**
+### **接口**
 
 接口，是Java语言中一种引用类型，是方法的集合，如果说类的内部封装了成员变量、构造方法和成员方法，那么接口的内部主要就是封装了方法。
 
@@ -608,5 +608,32 @@ public default void method() {
  
 
  
+
+### 抽象类和接口的区别
+
+1. **定义方式：**
+   - 抽象类使用 `abstract` 关键字来定义，可以包含抽象方法（没有实现的方法）和具体方法（有实现的方法）。
+   - 接口使用 `interface` 关键字来定义，只能包含抽象方法和常量字段（默认为 `public static final`）。
+2. **方法实现：**
+   - **抽象类可以包含抽象方法和具体方法**，子类可以继承抽象类并实现其中的抽象方法，也可以覆写具体方法。
+   - 接口中的方法默认都是抽象方法，实现接口的类需要实现接口中的所有抽象方法。
+3. **多继承：**
+   - **抽象类只能单继承**，即一个类只能有一个直接父类。
+   - **接口可以多继承**，即一个类可以实现多个接口。
+4. **构造方法：**
+   - 抽象类可以有构造方法，并且构造方法可以被子类调用。
+   - **接口不能有构造方法**，因为接口中只能包含常量字段和抽象方法，无法包含具体实现的方法或者状态。
+5. **成员变量：**
+   - 抽象类可以包含实例变量、静态变量、常量等。
+   - 接口只能包含常量字段（`public static final`），不能包含实例变量和静态变量。
+6. **默认方法和静态方法：**
+   - Java 8 引入了接口的默认方法和静态方法，可以在接口中提供默认的方法实现或者静态方法。抽象类没有这种特性。
+7. **用途和设计理念：**
+   - 抽象类用于定义类族中的共性特征，提供一部分通用实现，适合于代码重用和继承关系。
+   - 接口用于定义类的行为规范，强调的是能力和协议，适合于实现类的统一约束和多继承需求。
+
+
+
+
 
  
