--- a/Java/Java多并发/多线程.md
+++ b/Java/Java多并发/多线程.md
@@ -1,6 +1,6 @@
 ## 多线程
 
-#### **Java 线程和操作系统的线程有啥区别？**
+### **Java 线程和操作系统的线程有啥区别？**
 
 JDK 1.2 之前，Java 线程是基于绿色线程（Green Threads）实现的，这是一种用户级线程（用户线程），也就是说 JVM 自己模拟了多线程的运行，而不依赖于操作系统。由于绿色线程和原生线程比起来在使用时有一些限制（比如绿色线程不能直接使用操作系统提供的功能如异步 I/O、只能在一个内核线程上运行无法利用多核），在 JDK 1.2 及以后，Java 线程改为基于原生线程（Native Threads）实现，也就是说 JVM 直接使用操作系统原生的内核级线程（内核线程）来实现 Java 线程，由操作系统内核进行线程的调度和管理。
 
@@ -29,7 +29,7 @@ JDK 1.2 之前，Java 线程是基于绿色线程（Green Threads）实现的，
 
 
 
-#### **如何创建线程？**
+### **如何创建线程？**
 
 一般来说，创建线程有很多种方式，例如继承`Thread`类、实现`Runnable`接口、实现`Callable`接口、使用线程池、使用`CompletableFuture`类等等。
 
@@ -43,9 +43,9 @@ JDK 1.2 之前，Java 线程是基于绿色线程（Green Threads）实现的，
 
 
 
-#### **创建线程的方法**
+### **创建线程的方法**
 
-##### **创建多线程程序的第一种方式**
+#### **继承Thread类**
 
 创建一个类继承Thread类
 
@@ -182,7 +182,7 @@ Thread-2
 
  
 
-##### **为线程命名**
+**为线程命名**
 
 - **void setName(String name)** 改变线程名称，使之与参数name 相同。
 - **public Thread(String name)** 创建一个带参数的构造方法，参数传递线程的名称；调用父类的带参构造方法，把线程名称传递给父类，让父类(Thread)给子线程起一个名字
@@ -228,7 +228,7 @@ public class Demo01SetThreadName {
 
  
 
-##### **创建多线程程序的第二种方式：实现Runnable接口**
+#### **实现Runnable接口**
 
 Runnable接口应该由那些打算通过某一线程执行其实例的类来实现，Runnable接口的实现类类必须**定义一个称为 run 的无参数方法**
 
@@ -304,11 +304,71 @@ public class Demo01Runnable {
 
 
 
-##### **可以直接调用 Thread 类的 run 方法吗？**
+
+
+#### **实现Callable接口**
+
+```java
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.FutureTask;
+
+public class MyCallable implements Callable<Integer> {
+
+    private final int num;
+
+    public MyCallable(int num) {
+        this.num = num;
+    }
+
+    @Override
+    public Integer call() throws Exception {
+        System.out.println("Starting task for number: " + num);
+        Thread.sleep(2000);  // 模拟耗时操作
+        System.out.println("Task completed for number: " + num);
+        return num * num;
+    }
+
+    public static void main(String[] args) {
+        Callable<Integer> callable1 = new MyCallable(1);
+        Callable<Integer> callable2 = new MyCallable(2);
+        Callable<Integer> callable3 = new MyCallable(3);
+
+        FutureTask<Integer> futureTask1 = new FutureTask<>(callable1);
+        FutureTask<Integer> futureTask2 = new FutureTask<>(callable2);
+        FutureTask<Integer> futureTask3 = new FutureTask<>(callable3);
+
+        Thread thread1 = new Thread(futureTask1);
+        Thread thread2 = new Thread(futureTask2);
+        Thread thread3 = new Thread(futureTask3);
+
+        thread1.start();
+        thread2.start();
+        thread3.start();
+
+        try {
+            System.out.println("Result of task 1: " + futureTask1.get()); // 1
+            System.out.println("Result of task 2: " + futureTask2.get()); // 4
+            System.out.println("Result of task 3: " + futureTask3.get()); // 9
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+
+创建了三个实现了 `Callable` 接口的 `MyCallable` 对象，并将它们分别传递给 `FutureTask` 的构造函数，得到三个 `FutureTask` 对象。然后，我们创建了三个线程，分别用这些 `FutureTask` 对象来初始化线程，并启动这些线程。
+
+使用 `FutureTask` 可以直接将 `Callable` 对象传递给 `Thread` 构造函数，并且 `FutureTask` 本身实现了 `Runnable` 接口，因此可以作为线程的任务来执行。通过 `get()` 方法可以获取任务执行的结果，如果任务尚未完成，`get()` 方法会阻塞当前线程直到任务完成并返回结果。
+
+
+
+#### **可以直接调用 Thread 类的 run 方法吗？**
 
 这是另一个非常经典的 Java 多线程面试问题，而且在面试中会经常被问到。很简单，但是很多人都会答不上来！
 
-new 一个 `Thread`，线程进入了新建状态。调用 `start()`方法，会启动一个线程并使线程进入了就绪状态，当分配到时间片后就可以开始运行了。 `start()` 会执行线程的相应准备工作，然后自动执行 `run()` 方法的内容，这是真正的多线程工作。 但是，直接执行 `run()` 方法，会把 `run()` 方法当成一个 main 线程下的普通方法去执行，并不会在某个线程中执行它，所以这并不是多线程工作。
+new 一个 `Thread`，线程进入了新建状态。**调用 `start()`方法，会启动一个线程并使线程进入了就绪状态**，当分配到时间片后就可以开始运行了。 `start()` 会执行线程的相应准备工作，然后自动执行 `run()` 方法的内容，这是真正的多线程工作。 但是，**直接执行 `run()` 方法，会把 `run()` 方法当成一个 main 线程下的普通方法去执行**，并不会在某个线程中执行它，所以这并不是多线程工作。
 
 **总结：调用 `start()` 方法方可启动线程并使线程进入就绪状态，直接执行 `run()` 方法的话不会以多线程的方式执行。**
 
@@ -318,37 +378,33 @@ new 一个 `Thread`，线程进入了新建状态。调用 `start()`方法，会
 
 
 
-#### **线程的生命周期和状态**
+### **线程的生命周期和状态**
 
 Java 线程在运行的生命周期中的指定时刻只可能处于下面 6 种不同状态的其中一个状态：
 
 - NEW: 初始状态，线程被创建出来但没有被调用 `start()` 。
 - RUNNABLE: 运行状态，线程被调用了 `start()`等待运行的状态。
 - BLOCKED：阻塞状态，需要等待锁释放。
-- WAITING：等待状态，表示该线程需要等待其他线程做出一些特定动作（通知或中断）。
-- TIME_WAITING：超时等待状态，可以在指定的时间后自行返回而不是像 WAITING 那样一直等待。
+- WAITING：等待状态，执行 `wait()`方法之后，表示该线程需要等待其他线程做出一些特定动作（通知或中断）。
+- TIME_WAITING：超时等待状态，比如通过 `sleep（long millis）`方法，可以在指定的时间后自行返回而不是像 WAITING 那样一直等待。
 - TERMINATED：终止状态，表示该线程已经运行完毕。
 
 线程在生命周期中并不是固定处于某一个状态而是随着代码的执行在不同状态之间切换。
 
-
-
-<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240227161627341.png" alt="image-20240227161627341" style="zoom: 67%;" />
-
-
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240227161627341.png" alt="image-20240227161627341" style="zoom: 50%;" />
 
 
 
 - 线程创建之后它将处于 **NEW（新建）** 状态，调用 `start()` 方法后开始运行，线程这时候处于 **READY（可运行）** 状态
 - 可运行状态的线程获得了 CPU 时间片（timeslice）后就处于 **RUNNING（运行）** 状态。
-- 当线程执行 `wait()`方法之后，线程进入 **WAITING（等待）** 状态。进入等待状态的线程需要依靠其他线程的通知才能够返回到运行状态。
-- **TIMED_WAITING(超时等待)** 状态相当于在等待状态的基础上增加了超时限制，比如通过 `sleep（long millis）`方法或 `wait（long millis）`方法可以将线程置于 TIMED_WAITING 状态。当超时时间结束后，线程将会返回到 RUNNABLE 状态。
+- 当线程执行 `wait()`方法之后，线程进入 **WAITING（等待）** 状态。进入等待状态的线程需要依靠其他线程的通知才能够返回到运行状态。进入 WAITING 状态的线程不会消耗 CPU 资源，它会释放持有的锁（如果有的话）并进入等待队列中**，直到被唤醒（等待其他线程同一个对象调用notify或者notifyAll方法）。
 - 当线程进入 `synchronized` 方法/块或者调用 `wait` 后（被 `notify`）重新进入 `synchronized` 方法/块，但是锁被其它线程占有，这个时候线程就会进入 **BLOCKED（阻塞）** 状态。
+- **TIMED_WAITING(超时等待)** 状态相当于在等待状态的基础上增加了超时限制，比如通过 `sleep（long millis）`方法或 `wait（long millis）`方法可以将线程置于 TIMED_WAITING 状态。当超时时间结束后，线程将会返回到 RUNNABLE 状态。
 - 线程在执行完了 `run()`方法之后将会进入到 **TERMINATED（终止）** 状态。
 
 
 
-##### **wait方法和notify方法**
+#### **wait方法和notify方法**
 
 **void wait()：**在其他线程调用此对象的 notify() 方法或 notifyAll() 方法前，导致当前线程等待。
 
@@ -548,9 +604,9 @@ class Printer {
 
 
 
-##### **join方法**
+#### **join方法**
 
-当一个线程调用另一个线程的 `join()` 方法时，它会被阻塞，直到被调用的线程执行完毕或者超时。在其他线程调用的线程执行完毕之前，调用 `join()` 方法的线程将一直保持阻塞状态。
+当一个线程调用另一个线程的 `join()` 方法时，它会被阻塞，直到被调用的线程执行完毕或者超时。在其他线程调用的线程执行完毕之前，**调用 `join()` 方法的线程将一直保持阻塞状态。（如main线程调用其他线程的join，main会阻塞）**
 
 这个方法通常用于协调多个线程的执行顺序，常见的用法是在主线程中调用子线程的 `join()` 方法，以确保所有子线程都执行完毕后再继续执行主线程的后续逻辑。
 
@@ -651,7 +707,7 @@ public class Main {
 
 
 
-##### **sleep() 方法和 wait() 方法对比**
+#### **sleep() 方法和 wait() 方法对比**
 
 **共同点**：两者都可以暂停线程的执行。
 
@@ -664,7 +720,7 @@ public class Main {
 
 
 
-##### **为什么 wait() 方法不定义在 Thread 中？**
+#### **为什么 wait() 方法不定义在 Thread 中？**
 
 `wait()` 是让获得对象锁的线程实现等待，会自动释放当前线程占有的对象锁。每个对象（`Object`）都拥有对象锁，既然要释放当前线程占有的对象锁并让其进入 WAITING 状态，自然是要操作对应的对象（`Object`）而非当前的线程（`Thread`）。
 
@@ -676,9 +732,9 @@ public class Main {
 
 
 
-#### **死锁**
+### **Java中的死锁**
 
-##### **什么是线程死锁?如何避免死锁?**
+#### **什么是线程死锁?如何避免死锁?**
 
 线程死锁描述的是这样一种情况：多个线程同时被阻塞，它们中的一个或者全部都在等待某个资源被释放。由于线程被无限期地阻塞，因此程序不可能正常终止。
 
@@ -749,7 +805,7 @@ Thread[线程 2,5,main]waiting get resource1
 3. 不剥夺条件:线程已获得的资源在未使用完之前不能被其他线程强行剥夺，只有自己使用完毕后才释放资源。
 4. 循环等待条件:若干线程之间形成一种头尾相接的循环等待资源关系。
 
-##### **如何预防和避免线程死锁?**
+#### **如何预防和避免线程死锁?**
 
 **如何预防死锁？** 破坏死锁的产生的必要条件即可：
 
