--- a/Java/Java集合/1. Array，Arrays.md
+++ b/Java/Java集合/1. Array，Arrays.md
@@ -85,7 +85,7 @@ int[][] a = new int[3] [];
 
 ## **Arrays **
 
-##### 转换为String
+### 转换为String
 
 **Arrays.toString（数组）**把数组数据连接成字符串。
 
@@ -104,7 +104,7 @@ int[][] a = new int[3] [];
 
 
 
-##### 排序
+### 排序
 
 **Arrays.sort(）** 数组排序基本类型：优化的快速排序；引用类型：优化的合并排序。
 
@@ -164,16 +164,18 @@ System.out.println(Arrays.binarySearch(nums,-2)); //1
 
 
 
-##### 复制
+### 复制
 
 **public static int[] copyOf(int[] original,** **int newLength)：**复制指定的数组，截取或用 0 填充（如有必要），以使副本具有指定的长度。对于在原数组和副本中都有效的所有索引，这两个数组将包含相同的值。对于在副本中有效而在原数组无效的所有索引，副本将包含 0。当且仅当指定长度大于原数组的长度时，这些索引存在。
 
 ```java
-int arr1[]=new int []{1,2,3,4,5};
-int arr2[]=new int []{7,8,9,10,11};
-System.arraycopy(arr2,0,arr1,0,3);
-System.out.println(Arrays.toString(arr1)); //[7, 8, 9, 4, 5]
+ 		// 原始数组
+        int[] originalArray = {1, 2, 3, 4, 5};
+        // 使用 Arrays.copyOf() 复制数组
+        int[] copiedArray = Arrays.copyOf(originalArray, originalArray.length);
 ```
+
+通过 `Arrays.copyOf()` 方法复制的数组是一个全新的数组，与原始数组完全独立，修改原始数组的值并不会影响到复制后的数组。
 
 
 
@@ -210,7 +212,7 @@ System.out.println(Arrays.toString(destinationArray)); //[1, 2, 3, 4, 5]
 
 
 
-##### 转换为List
+### 转换为List
 
 **Arrays.asList( )：**注意该方法的返回值是java.util.Arrays类中一个私有静态内部类java.util.Arrays.ArrayList，它并非java.util.ArrayList类。
 
