--- a/Java/Java集合/3. List接口.md
+++ b/Java/Java集合/3. List接口.md
@@ -2,7 +2,7 @@
 
 **java.util.List extends Collection**接口继承自Collection接口，是单列集合的一个重要分支，习惯性地会将实现了List接口的对象称为List集合。在List集合中允许出现重复的元素，所有的元素是以一种线性方式进行存储的，在程序中可以通过索引来访问集合中的指定元素。另外，List集合还有一个特点就是**元素有序**，即元素的存入顺序和取出顺序一致。
 
-#### **List接口的特点**
+### **List接口的特点**
 
 - 有序的集合,存储元素和取出元素的顺序是一致的(存储123 取出123)
 - 有索引,包含了一些带索引的方法
@@ -69,11 +69,9 @@ System.out.println(list);//[a, b, itheima, d, A]
 
  
 
-#### **ArrayList**
+### **ArrayList**
 
 **ArrayList implements List**，ArrayList集合数据存储的结构是数组结构。元素增删慢，查找快，由于日常开发中使用最多的功能为查询数据、遍历数据，所以ArrayList是最常用的集合。数组的长度不可以发生改变，但是ArrayList集合的**长度是可以随意变化**的。
-
-
 
 - ArrayList 底层就是⼀个 Object[] 数组
 
@@ -146,25 +144,46 @@ public static void main(String[] args) {
 
  
 
-#### **ArrayList 和 Array（数组）的区别？**
+### **ArrayList 和 Array（数组）的区别？**
 
 `ArrayList` 内部基于动态数组实现，比 `Array`（静态数组） 使用起来更加灵活：
 
 - `ArrayList`会根据实际存储的元素动态地扩容或缩容，而 `Array` 被创建之后就不能改变它的长度了。
-
 - `ArrayList` 允许你使用泛型来确保类型安全，`Array` 则不可以。
-
 - `ArrayList` 中只能存储对象。对于基本类型数据，需要使用其对应的包装类（如 Integer、Double 等）。`Array` 可以直接存储基本类型数据，也可以存储对象。
-
 - `ArrayList` 支持插入、删除、遍历等常见操作，并且提供了丰富的 API 操作方法，比如 `add()`、`remove()`等。`Array` 只是一个固定长度的数组，只能按照下标访问其中的元素，不具备动态添加、删除元素的能力。
-
 - `ArrayList`创建时不需要指定大小，而`Array`创建时必须指定大小。
 
-  
+
+
+### **ArrayList的扩容机制**
+
+ArrayList在jdk7.0的时候，创建容器的时候会在底层创建一个长度为10的object数组，在jdk8.0的时候，在创建容器的时候底层并不会立刻创建，只有在第一次调用add方法的时候才会创建一个长度为10的数组，当然也可以通过构造函数的方式给自定义初始化的容量
+
+**扩容策略**：ArrayList 的扩容策略是每次扩容为当前容量的 1.5 倍。这意味着，当内部数组满了之后，ArrayList 会创建一个新的更大容量的数组，并将原数组中的元素复制到新数组中
+
+**复制元素**：在进行扩容时，ArrayList 会调用 `Arrays.copyOf()` 方法来创建新的数组，并将原数组中的元素复制到新数组中
+
+**Arrays.copyOf()方法**
+
+```java
+    public static int[] copyOf(int[] original, int newLength) {
+      // 申请一个新的数组
+        int[] copy = new int[newLength];
+  // 调用System.arraycopy,将源数组中的数据进行拷贝,并返回新的数组
+        System.arraycopy(original, 0, copy, 0,
+                         Math.min(original.length, newLength));
+        return copy;
+    }
+```
+
+ `copyOf()`内部实际调用了 `System.arraycopy()` 方法
 
 
 
-#### **LinkedList**
+
+
+### **LinkedList**
 
 java.util.LinkedList集合数据存储的结构是链表结构。方便元素添加、删除的集合
 
@@ -220,7 +239,7 @@ public class LinkedListDemo {
 
  
 
-#### **LinkedList 为什么不能实现 RandomAccess 接口？**
+### **LinkedList 为什么不能实现 RandomAccess 接口？**
 
 `RandomAccess` 是一个标记接口，用来表明实现该接口的类支持随机访问（即可以通过索引快速访问元素）。**由于 `LinkedList` 底层数据结构是链表，内存地址不连续，只能通过指针来定位，不支持随机快速访问**，所以不能实现 `RandomAccess` 接口。
 
@@ -230,7 +249,7 @@ public class LinkedListDemo {
 
 
 
-#### **ArrayList 与 LinkedList 区别?**
+### **ArrayList 与 LinkedList 区别?**
 
 - **是否保证线程安全：** `ArrayList` 和 `LinkedList` 都是不同步的，也就是不保证线程安全；
 - **底层数据结构：** `ArrayList` 底层使用的是 **`Object` 数组**；`LinkedList` 底层使用的是 **双向链表** 数据结构（JDK1.6 之前为循环链表，JDK1.7 取消了循环。注意双向链表和双向循环链表的区别，下面有介绍到！）
@@ -252,7 +271,7 @@ public class LinkedListDemo {
 
 
 
-#### **Vector**
+### **Vector**
 
 **Vector implements List**
 
@@ -275,7 +294,7 @@ public class LinkedListDemo {
 
 
 
-#### **Stack**
+### **Stack**
 
 **Stack extend Vector implements List** 
 
