--- a/Java/Java集合/5. Queue接口.md
+++ b/Java/Java集合/5. Queue接口.md
@@ -62,8 +62,6 @@ Queue接口与List、Set同一级别，都是继承了Collection接口。LinkedL
 
 
 
- 
-
 #### **ArrayDeque**
 
 `ArrayDeque` 和 `LinkedList` 都实现了 `Deque` 接口，两者都具有队列的功能，但两者有什么区别呢？
@@ -164,7 +162,7 @@ public interface BlockingQueue<E> extends Queue<E> {
 
 `BlockingQueue` 常用于生产者-消费者模型中，生产者线程会向队列中添加数据，而消费者线程会从队列中取出数据进行处理。
 
-![BlockingQueue](https://oss.javaguide.cn/github/javaguide/java/collection/blocking-queue.png)
+<img src="https://oss.javaguide.cn/github/javaguide/java/collection/blocking-queue.png" alt="BlockingQueue" style="zoom: 67%;" />
 
  
 
