--- a/计算机基础/操作系统/进程管理.md
+++ b/计算机基础/操作系统/进程管理.md
@@ -1,6 +1,6 @@
-## 进程
+## **进程**
 
-#### **进程和线程的区别是什么？**
+### **进程和线程的区别是什么？**
 
 定义：进程是正在执行的程序的实例。它是操作系统分配资源的基本单位，拥有独立的内存空间和系统资源。线程是进程内的执行单元，是进程的一个执行流程。一个进程可以包含多个线程。
 
@@ -28,7 +28,7 @@
 
 
 
-#### **什么是协程**
+### **什么是协程**
 
 定义：协程是一种轻量级的线程，可以在特定的时机进行挂起和恢复，以实现协作式多任务处理。它由程序员显示地控制执行流程，可以在代码中定义多个协程。
 
@@ -45,7 +45,7 @@
 
 
 
-#### **为什么要使用多线程?**
+### **为什么要使用多线程?**
 
 先从总体上来说：
 
@@ -59,9 +59,7 @@
 
 
 
-
-
-#### **PCB 是什么？包含哪些信息？**
+### **PCB 是什么？包含哪些信息？**
 
 **PCB（Process Control Block）** 即进程控制块，是操作系统中用来管理和跟踪进程的数据结构，每个进程都对应着一个独立的 PCB。你可以将 PCB 视为进程的大脑。
 
@@ -83,7 +81,7 @@ PCB 主要包含下面几部分的内容：
 
 
 
-#### **进程有哪几种状态?**
+### **进程有哪几种状态?**
 
 我们一般把进程大致分为 5 种状态，这一点和线程很像！
 
@@ -97,19 +95,111 @@ PCB 主要包含下面几部分的内容：
 
 
 
-#### **进程的调度算法有哪些?**
+### **进程的调度算法有哪些?**
 
-**先到先服务调度算法(FCFS，First Come, First Served)** : 从就绪队列中选择一个最先进入该队列的进程为之分配资源，使它立即执行并一直执行到完成或发生某事件而被阻塞放弃占用 CPU 时再重新调度。
+**先到先服务调度算法(FCFS，First Come, First Served)** 
 
-**短作业优先的调度算法(SJF，Shortest Job First)** : 从就绪队列中选出一个估计运行时间最短的进程为之分配资源，使它立即执行并一直执行到完成或发生某事件而被阻塞放弃占用 CPU 时再重新调度。
+最简单的一个调度算法，就是非抢占式的**先来先服务（\*First Come First Severd, FCFS\*）算法**了。
 
-**时间片轮转调度算法（RR，Round-Robin）** : 时间片轮转调度是一种最古老，最简单，最公平且使用最广的算法。每个进程被分配一个时间段，称作它的时间片，即该进程允许运行的时间。
+顾名思义，先来后到，**每次从就绪队列选择最先进入队列的进程，然后一直运行，直到进程退出或被阻塞，才会继续从队列中选择第一个进程接着运行。**
 
-**高响应比优先（Highest Response Ratio Next，HRRN）**：是一种用于调度作业的优先级算法。它是根据作业的响应比来确定调度顺序的。响应比 = （等待时间 + 作业服务时间）/ 作业服务时间。优点是能够兼顾长作业和短作业，不会出现饥饿现象。
+这似乎很公平，但是当一个长作业先运行了，那么后面的短作业等待的时间就会很长，不利于短作业。
 
-**多级反馈队列调度算法（MFQ，Multi-level Feedback Queue）**：前面介绍的几种进程调度的算法都有一定的局限性。如**短进程优先的调度算法，仅照顾了短进程而忽略了长进程** 。多级反馈队列调度算法既能使高优先级的作业得到响应又能使短作业（进程）迅速完成。，因而它是目前**被公认的一种较好的进程调度算法**，UNIX 操作系统采取的便是这种调度算法。
+FCFS 对长作业有利，适用于 CPU 繁忙型作业的系统，而不适用于 I/O 繁忙型作业的系统。
 
-**优先级调度算法（Priority）**：为每个流程分配优先级，首先执行具有最高优先级的进程，依此类推。具有相同优先级的进程以 FCFS 方式执行。可以根据内存要求，时间要求或任何其他资源要求来确定优先级。
+
+
+**短作业优先的调度算法(SJF，Shortest Job First)** 
+
+**最短作业优先（\*Shortest Job First, SJF\*）调度算法**同样也是顾名思义，它会**优先选择运行时间最短的进程来运行**，这有助于提高系统的吞吐量。
+
+![image-20240408142309423](https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408142309423.png)
+
+这显然对长作业不利，很容易造成一种极端现象。
+
+比如，一个长作业在就绪队列等待运行，而这个就绪队列有非常多的短作业，那么就会使得长作业不断的往后推，周转时间变长，致使长作业长期不会被运行。
+
+
+
+**高响应比优先（Highest Response Ratio Next，HRRN）**
+
+前面的「先来先服务调度算法」和「最短作业优先调度算法」都没有很好的权衡短作业和长作业。
+
+**那么，高响应比优先调度算法主要是权衡了短作业和长作业。**
+
+**每次进行进程调度时，先计算「响应比优先级」，然后把「响应比优先级」最高的进程投入运行**，「响应比优先级」的计算公式：
+
+![img](https://cdn.xiaolincoding.com/gh/xiaolincoder/ImageHost/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F/%E8%BF%9B%E7%A8%8B%E5%92%8C%E7%BA%BF%E7%A8%8B/26-%E5%93%8D%E5%BA%94%E6%AF%94%E5%85%AC%E5%BC%8F.jpg)
+
+从上面的公式，可以发现：
+
+- 如果两个进程的「等待时间」相同时，「要求的服务时间」越短，「响应比」就越高，这样短作业的进程容易被选中运行；
+- 如果两个进程「要求的服务时间」相同时，「等待时间」越长，「响应比」就越高，这就兼顾到了长作业进程，因为进程的响应比可以随时间等待的增加而提高，当其等待时间足够长时，其响应比便可以升到很高，从而获得运行的机会；
+
+**时间片轮转调度算法（RR，Round-Robin）** 
+
+最古老、最简单、最公平且使用最广的算法就是**时间片轮转（\*Round Robin, RR\*）调度算法**。
+
+<img src="https://cdn.xiaolincoding.com/gh/xiaolincoder/ImageHost/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F/%E8%BF%9B%E7%A8%8B%E5%92%8C%E7%BA%BF%E7%A8%8B/27-%E6%97%B6%E9%97%B4%E7%89%87%E8%BD%AE%E8%AF%A2.jpg" alt="RR 调度算法" style="zoom: 67%;" />
+
+**每个进程被分配一个时间段，称为时间片（\*Quantum\*），即允许该进程在该时间段中运行。**
+
+- 如果时间片用完，进程还在运行，那么将会把此进程从 CPU 释放出来，并把 CPU 分配另外一个进程；
+- 如果该进程在时间片结束前阻塞或结束，则 CPU 立即进行切换；
+
+另外，时间片的长度就是一个很关键的点：
+
+- 如果时间片设得太短会导致过多的进程上下文切换，降低了 CPU 效率；
+- 如果设得太长又可能引起对短作业进程的响应时间变长。将
+
+通常时间片设为 `20ms~50ms` 通常是一个比较合理的折中值。
+
+
+
+**优先级调度算法（Priority）**
+
+前面的「时间片轮转算法」做了个假设，即让所有的进程同等重要，也不偏袒谁，大家的运行时间都一样。
+
+但是，对于多用户计算机系统就有不同的看法了，它们希望调度是有优先级的，即希望调度程序能**从就绪队列中选择最高优先级的进程进行运行，这称为最高优先级（Highest Priority First，HPF）调度算法**。
+
+进程的优先级可以分为，静态优先级或动态优先级：
+
+- 静态优先级：创建进程时候，就已经确定了优先级了，然后整个运行时间优先级都不会变化；
+- 动态优先级：根据进程的动态变化调整优先级，比如如果进程运行时间增加，则降低其优先级，如果进程等待时间（就绪队列的等待时间）增加，则升高其优先级，也就是**随着时间的推移增加等待进程的优先级**。
+
+该算法也有两种处理优先级高的方法，非抢占式和抢占式：
+
+- 非抢占式：当就绪队列中出现优先级高的进程，运行完当前进程，再选择优先级高的进程。
+- 抢占式：当就绪队列中出现优先级高的进程，当前进程挂起，调度优先级高的进程运行。
+
+但是依然有缺点，可能会导致低优先级的进程永远不会运行。
+
+
+
+**多级反馈队列调度算法（MFQ，Multi-level Feedback Queue）**
+
+**多级反馈队列调度算法**是「时间片轮转算法」和「最高优先级算法」的综合和发展。
+
+顾名思义：
+
+- 「多级」表示有多个队列，每个队列优先级从高到低，同时优先级越高时间片越短。
+- 「反馈」表示如果有新的进程加入优先级高的队列时，立刻停止当前正在运行的进程，转而去运行优先级高的队列；
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408142531999.png" alt="image-20240408142531999" style="zoom:50%;" />
+
+来看看，它是如何工作的：
+
+- 设置了多个队列，赋予每个队列不同的优先级，每个**队列优先级从高到低**，同时**优先级越高时间片越短**；
+- 新的进程会被放入到第一级队列的末尾，按先来先服务的原则排队等待被调度，如果在第一级队列规定的时间片没运行完成，则将其转入到第二级队列的末尾，以此类推，直至完成；
+- 当较高优先级的队列为空，才调度较低优先级的队列中的进程运行。如果进程运行时，有新进程进入较高优先级的队列，则停止当前运行的进程并将其移入到原队列末尾，接着让较高优先级的进程运行；
+
+可以发现，对于短作业可能可以在第一级队列很快被处理完。对于长作业，如果在第一级队列处理不完，可以移入下次队列等待被执行，虽然等待的时间变长了，但是运行时间也会更长了，所以该算法很好的**兼顾了长短作业，同时有较好的响应时间。**
+
+
+
+
+
+
 
 ![image-20240310222750191](https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240310222750191.png)
 
@@ -117,65 +207,206 @@ PCB 主要包含下面几部分的内容：
 
 
 
-#### **进程间的通信方式有哪些？**
+### **进程间的通信方式有哪些？**
 
 > 下面这部分总结参考了:[《进程间通信 IPC (InterProcess Communication)》open in new window](https://www.jianshu.com/p/c1015f5ffa74) 这篇文章，推荐阅读，总结的非常不错。
 
-**管道/匿名管道(Pipes)**：用于具有亲缘关系的父子进程间或者兄弟进程之间的通信。
+#### **管道/匿名管道(Pipes)**
+
+**对于匿名管道，它的通信范围是存在父子关系或兄弟进程的进程**。因为管道没有实体，也就是没有管道文件，只能通过 fork 来复制父进程 fd 文件描述符，来达到通信的目的。
 
 管道是**半双工**的，数据只能向一个方向流动；需要双方通信时，需要建立起两个管道。
 
 只能用于父子进程或者兄弟进程之间(具有亲缘关系的进程);
 
-单独构成一种独立的文件系统：管道对于管道两端的进程而言，就是一个文件，但它不是普通的文件，它不属于某种文件系统，而是自立门户，**单独构成一种文件系统，并且只存在与内存中**。
-
-**管道的实质是一个内核缓冲区**
+单独构成一种独立的文件系统：管道对于管道两端的进程而言，就是一个文件，但它不是普通的文件，它不属于某种文件系统，而是自立门户，**是一种特殊的文件，并且只存在与内存中**。**管道的实质是一个内核缓冲区**
 
 数据的读出和写入：一个进程向管道中写的内容被管道另一端的进程读出。写入的内容每次都添加在管道缓冲区的末尾，并且每次都是从缓冲区的头部读出数据。
 
-<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240323143826086.png" alt="image-20240323143826086" style="zoom: 67%;" />
+只能同步的读写，写数据时必须等待读线程把数据取走，读数据必须等待写线程把数据写入，**管道这种通信方式效率低，不适合进程间频繁地交换数据**。
 
 
 
-**有名管道(Named Pipes)** : 匿名管道由于没有名字，只能用于亲缘关系的进程间通信。为了克服这个缺点，提出了有名管道。有名管道严格遵循 **先进先出(First In First Out)** 。有名管道以**磁盘文件的方式**存在，可以实现本机任意两个进程通信。**有名管道的名字存在于文件系统中，内容存放在内存中。**
+**Linux具体操作**
 
-**信号(Signal)**：信号是一种比较复杂的通信方式，用于通知接收进程某个事件已经发生；
+```bash
+$ ps auxf | grep mysql
+```
 
-信号是Linux系统中用于进程间互相通信或者操作的一种机制，信号可以在任何时候发给某一进程，而无需知道该进程的状态。
+上面命令行里的「`|`」竖线就是一个**管道**，它的功能是将前一个命令（`ps auxf`）的输出，作为后一个命令（`grep mysql`）的输入，从这功能描述，可以看出**管道传输数据是单向的**，如果想相互通信，我们需要创建两个管道才行。
+
+我们可以使用 `fork` 创建子进程，**创建的子进程会复制父进程的文件描述符**，这样就做到了两个进程各有两个「 `fd[0]` 与 `fd[1]`」，两个进程就可以通过各自的 fd 写入和读取同一个管道文件实现跨进程通信了。
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408122558693.png" alt="image-20240408122558693" style="zoom:50%;" />
+
+
+
+
+
+
+
+#### **有名管道(Named Pipes)** 
+
+匿名管道由于没有名字，只能用于亲缘关系的进程间通信。为了克服这个缺点，提出了有名管道。有名管道严格遵循 **先进先出(First In First Out)** 。有名管道以**磁盘文件的方式**存在，可以实现本机任意两个进程通信。**有名管道的名字存在于文件系统中，内容存放在内存中。**
+
+在使用命名管道前，先需要通过 `mkfifo` 命令来创建，并且指定管道名字：
+
+```bash
+$ mkfifo myPipe
+```
+
+myPipe 就是这个管道的名称，基于 Linux 一切皆文件的理念，所以管道也是以文件的方式存在，我们可以用 ls 看一下，这个文件的类型是 p，也就是 pipe（管道） 的意思：
+
+```bash
+$ ls -l
+prw-r--r--. 1 root    root         0 Jul 17 02:45 myPipe
+```
+
+接下来，我们往 myPipe 这个管道写入数据：
+
+```bash
+$ echo "hello" > myPipe  // 将数据写进管道
+                         // 停住了 ...
+```
+
+你操作了后，你会发现命令执行后就停在这了，这是因为管道里的内容没有被读取，只有当管道里的数据被读完后，命令才可以正常退出。
+
+于是，我们执行另外一个命令来读取这个管道里的数据：
+
+```bash
+$ cat < myPipe  // 读取管道里的数据
+hello
+```
+
+可以看到，管道里的内容被读取出来了，并打印在了终端上，另外一方面，echo 那个命令也正常退出了。
+
+**缺点：**
+
+只能同步的读写，写数据时必须等待读线程把数据取走，读数据必须等待写线程把数据写入，**管道这种通信方式效率低，不适合进程间频繁地交换数据**。
+
+
+
+
+
+
+
+
+
+
+
+#### **消息队列(Message Queuing)**
+
+前面说到管道的通信方式是效率低的，因此管道不适合进程间频繁地交换数据。
+
+对于这个问题，**消息队列**的通信模式就可以解决。比如，A 进程要给 B 进程发送消息，A 进程把数据放在对应的消息队列后就可以正常返回了，B 进程需要的时候再去读取数据就可以了。同理，B 进程要给 A 进程发送消息也是如此。
+
+再来，**消息队列是保存在内核中的消息链表**，在发送数据时，会分成一个一个独立的数据单元，也就是消息体（数据块），消息体是用户自定义的数据类型，消息的发送方和接收方要约定好消息体的数据类型，所以每个消息体都是固定大小的存储块，不像管道是无格式的字节流数据。如果进程从消息队列中读取了消息体，内核就会把这个消息体删除。
+
+消息队列生命周期随内核，**如果没有释放消息队列或者没有关闭操作系统，消息队列会一直存在**，而前面提到的匿名管道的生命周期，是随进程的创建而建立，随进程的结束而销毁。
+
+**缺点：**
+
+**一是通信不及时，二是附件也有大小限制**，这同样也是消息队列通信不足的点。
+
+**消息队列不适合比较大数据的传输**，因为在内核中每个消息体都有一个最大长度的限制，同时所有队列所包含的全部消息体的总长度也是有上限。在 Linux 内核中，会有两个宏定义 `MSGMAX` 和 `MSGMNB`，它们以字节为单位，分别定义了一条消息的最大长度和一个队列的最大长度。
+
+**消息队列通信过程中，存在用户态与内核态之间的数据拷贝开销**，因为进程写入数据到内核中的消息队列时，会发生从用户态拷贝数据到内核态的过程，同理另一进程读取内核中的消息数据时，会发生从内核态拷贝数据到用户态的过程。
+
+
+
+**共享内存(Shared memory)**
+
+使得多个进程可以访问同一块内存空间，不同进程可以及时看到对方进程中对共享内存中数据的更新。这种方式需要依靠某种**同步操作，如互斥锁和信号量**等。可以说这是最有用的进程间通信方式。
+
+**共享内存的机制，就是拿出一块虚拟地址空间来，映射到相同的物理内存中**。这样这个进程写入的东西，另外一个进程马上就能看到了，都不需要拷贝来拷贝去，传来传去，大大提高了进程间通信的速度。
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408123911320.png" alt="image-20240408123911320" style="zoom: 67%;" />
+
+
+
+#### **信号量(Semaphores)**
+
+用了共享内存通信方式，带来新的问题，那就是如果多个进程同时修改同一个共享内存，很有可能就冲突了。例如两个进程都同时写一个地址，那先写的那个进程会发现内容被别人覆盖了。
+
+为了防止多进程竞争共享资源，而造成的数据错乱，所以需要保护机制，使得共享的资源，在任意时刻只能被一个进程访问。正好，**信号量**就实现了这一保护机制。
+
+**信号量其实是一个整型的计数器，主要用于实现进程间的互斥与同步，而不是用于缓存进程间通信的数据**。
+
+
+
+
+
+#### **信号(Signal)**
+
+上面说的进程间通信，都是常规状态下的工作模式。**对于异常情况下的工作模式，就需要用「信号」的方式来通知进程。**
+
+信号是一种比较复杂的通信方式，用于通知接收进程某个事件已经发生
+
+信号是Linux系统中用于进程间互相通信或者操作的一种机制，**信号可以在任何时候发给某一进程，而无需知道该进程的状态。**
 
 如果该进程当前并未处于执行状态，则该信号就有内核保存起来，知道该进程回复执行并传递给它为止。
 
 如果一个信号被进程设置为阻塞，则该信号的传递被延迟，直到其阻塞被取消是才被传递给进程。
 
+在 Linux 操作系统中， 为了响应各种各样的事件，提供了几十种信号，分别代表不同的意义。我们可以通过 `kill -l` 命令，查看所有的信号：
 
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408124145534.png" alt="image-20240408124145534" style="zoom: 67%;" />
 
-**消息队列(Message Queuing)**
+运行在 shell 终端的进程，我们可以通过键盘输入某些组合键的时候，给进程发送信号。例如
 
- （1）消息队列是消息的链表,具有特定的格式,存放在内存中并由消息队列标识符标识.
+- Ctrl+C 产生 `SIGINT` 信号，表示终止该进程；
+- Ctrl+Z 产生 `SIGTSTP` 信号，表示停止该进程，但还未结束；
 
-（2）消息队列允许一个或多个进程向它写入与读取消息.
+如果进程在后台运行，可以通过 `kill` 命令的方式给进程发送信号，但前提需要知道运行中的进程 PID 号，例如：
 
-（3）管道和消息队列的通信数据都是先进先出的原则。
+- kill -9 1050 ，表示给 PID 为 1050 的进程发送 `SIGKILL` 信号，用来立即结束该进程；
 
-（4）消息队列可以**实现消息的随机查询**,消息不一定要以先进先出的次序读取,也可以按消息的类型读取，比FIFO更有优势。
+所以，信号事件的来源主要有硬件来源（如键盘 Cltr+C ）和软件来源（如 kill 命令）。
 
-（5）消息队列**克服了信号承载信息量少，管道只能承载无格式字节流以及缓冲区大小受限等缺点**。
+信号是进程间通信机制中**唯一的异步通信机制**，因为可以在任何时候发送信号给某一进程，一旦有信号产生，我们就有下面这几种，用户进程对信号的处理方式。
 
-（6）目前主要有两种类型的消息队列：POSIX消息队列以及System V消息队列，系统V消息队列目前被大量使用。系统V消息队列是随内核持续的，只有在内核重起或者人工删除时，该消息队列才会被删除。
+**1.执行默认操作**。Linux 对每种信号都规定了默认操作，例如，上面列表中的 SIGTERM 信号，就是终止进程的意思。
 
+**2.捕捉信号**。我们可以为信号定义一个信号处理函数。当信号发生时，我们就执行相应的信号处理函数。
 
-
-**信号量(Semaphores)**：信号量是一个计数器，用于多进程对共享数据的访问，信号量的意图在于**进程间同步**。这种通信方式主要用于解决与同步相关的问题并避免竞争条件。
-
-**共享内存(Shared memory)**：使得多个进程可以访问同一块内存空间，不同进程可以及时看到对方进程中对共享内存中数据的更新。这种方式需要依靠某种**同步操作，如互斥锁和信号量**等。可以说这是最有用的进程间通信方式。
-
-**套接字(Sockets)** : 此方法主要用于在客户端和服务器之间通过网络进行通信。套接字是支持 TCP/IP 的网络通信的基本操作单元，可以看做是**不同主机之间的进程进行双向通信**的端点，简单的说就是通信的两方的一种约定，用套接字中的相关函数来完成通信过程。
-
-
+**3.忽略信号**。当我们不希望处理某些信号的时候，就可以忽略该信号，不做任何处理。有两个信号是应用进程无法捕捉和忽略的，即 `SIGKILL` 和 `SEGSTOP`，它们用于在任何时候中断或结束某一进程。
 
 
 
-#### **什么是僵尸进程和孤儿进程？**
+
+
+#### **套接字(Sockets)** 
+
+此方法主要用于在客户端和服务器之间通过网络进行通信。套接字是支持 TCP/IP 的网络通信的基本操作单元，可以看做是**不同主机之间的进程进行双向通信**的端点，简单的说就是通信的两方的一种约定，用套接字中的相关函数来完成通信过程。
+
+针对 TCP 协议通信的 socket 编程模型
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240408124327303.png" alt="image-20240408124327303" style="zoom:50%;" />
+
+- 服务端和客户端初始化 `socket`，得到文件描述符；
+- 服务端调用 `bind`，将绑定在 IP 地址和端口;
+- 服务端调用 `listen`，进行监听；
+- 服务端调用 `accept`，等待客户端连接；
+- 客户端调用 `connect`，向服务器端的地址和端口发起连接请求；
+- 服务端 `accept` 返回用于传输的 `socket` 的文件描述符；
+- 客户端调用 `write` 写入数据；服务端调用 `read` 读取数据；
+- 客户端断开连接时，会调用 `close`，那么服务端 `read` 读取数据的时候，就会读取到了 `EOF`，待处理完数据后，服务端调用 `close`，表示连接关闭。
+
+这里需要注意的是，服务端调用 `accept` 时，连接成功了会返回一个已完成连接的 socket，后续用来传输数据。
+
+所以，监听的 socket 和真正用来传送数据的 socket，是「**两个**」 socket，一个叫作**监听 socket**，一个叫作**已完成连接 socket**。
+
+成功连接建立之后，双方开始通过 read 和 write 函数来读写数据，就像往一个文件流里面写东西一样。
+
+
+
+
+
+
+
+
+
+### **什么是僵尸进程和孤儿进程？**
 
 在 Unix/Linux 系统中，子进程通常是通过 fork()系统调用创建的，该调用会创建一个新的进程，该进程是原有进程的一个副本。子进程和父进程的运行是相互独立的，它们各自拥有自己的 PCB，即使父进程结束了，子进程仍然可以继续运行。
 
@@ -190,9 +421,9 @@ PCB 主要包含下面几部分的内容：
 
 
 
+## **死锁**
 
-
-#### **死锁和饥饿的区别**
+### **死锁和饥饿的区别**
 
 **死锁：**一个进程集合内每个进程都在等待只能由此集合中的其他进程才能引发的事件，而无限期僵持的现象。
 
@@ -204,7 +435,7 @@ PCB 主要包含下面几部分的内容：
 
 
 
-#### **产生死锁的四个必要条件是什么?**
+### **产生死锁的四个必要条件是什么?**
 
 互斥条件：系统中存在临界资源，进程互斥访问这些资源。
 
@@ -220,7 +451,7 @@ PCB 主要包含下面几部分的内容：
 
 
 
-#### **死锁的解决方法**
+### **死锁的解决方法**
 
 解决死锁的方法可以从多个角度去分析，一般的情况下，有**预防，避免，检测和解除四种**。
 
