--- a/计算机基础/计算机网络/6. HTTP相关.md
+++ b/计算机基础/计算机网络/6. HTTP相关.md
@@ -273,19 +273,37 @@ TLS的认证原理可以简略地用下图来表示：
 
 **Cookie**
 
-1. **存储位置：** Cookie是在客户端（用户浏览器）存储的小型文本文件，由浏览器保存。每次请求都会将相应的Cookie信息发送到服务器。
-2. **大小限制：** 单个Cookie的大小通常有限制，一般在几KB左右。浏览器对每个域名下的Cookie数量也有限制。
-3. **安全性：** Cookie中的数据在客户端是可见的，因此对于敏感信息的存储需要进行加密等安全处理。可以通过设置Cookie的属性来增加安全性，如将Cookie标记为HttpOnly，使其无法通过JavaScript脚本访问。
-4. **跨域：** Cookie具有同源策略，只有在设置Cookie的域名和请求的域名一致时，Cookie才会被发送。
-5. **过期时间：** 可以通过设置Cookie的过期时间来控制Cookie的有效期。
+**存储位置：** Cookie是在客户端（用户浏览器）存储的小型文本文件，由浏览器保存。每次请求都会将相应的Cookie信息发送到服务器。
 
-**Session:**
+**大小限制：** 单个Cookie的大小通常有限制，一般在几KB左右。浏览器对每个域名下的Cookie数量也有限制。
 
-1. **存储位置：** Session是在服务器端存储的用户会话信息。通常，会话数据存储在服务器的内存中或持久化到数据库中。典型的场景是购物车，当你要添加商品到购物车的时候，系统不知道是哪个用户操作的，**因为 HTTP 协议是无状态的。**服务端给特定的用户创建特定的 `Session` 之后就可以标识这个用户并且跟踪这个用户了。
-2. **大小限制：** 理论上，服务器端的存储空间是有限制的，但相比于Cookie，Session可以存储更大量的数据。
-3. **安全性：** 由于Session存储在服务器端，因此对于客户端来说，Session数据是不可见的。这提供了更高的安全性，因为用户无法直接修改Session数据。
-4. **跨域：** Session数据存储在服务器端，不受同源策略的限制。可以在不同域名之间共享会话信息。
-5. **过期时间：** 通常，Session有一个过期时间，一旦超过这个时间，服务器会自动销毁该Session。
+**安全性：** Cookie中的**数据在客户端是可见的，因此对于敏感信息的存储需要进行加密等安全处理**。可以通过设置Cookie的属性来增加安全性，如将Cookie标记为HttpOnly，使其无法通过JavaScript脚本访问。
+
+**跨域：** Cookie具有同源策略，只有在设置Cookie的域名和请求的域名一致时，Cookie才会被发送。
+
+**过期时间：** 可以通过设置Cookie的过期时间来控制Cookie的有效期。
+
+
+
+**Session**
+
+**存储位置：** Session是在服务器端存储的用户会话信息。通常，会话数据存储在服务器的内存中或持久化到数据库中。典型的场景是购物车，当你要添加商品到购物车的时候，系统不知道是哪个用户操作的，**因为 HTTP 协议是无状态的。**服务端给特定的用户创建特定的 `Session` 之后就可以标识这个用户并且跟踪这个用户了。
+
+**大小限制：** 理论上，服务器端的存储空间是有限制的，**Session可以存储更大量的数据，在高并发的环境下比较占用服务器资源**
+
+**安全性：** 由于Session存储在服务器端，因此对于客户端来说，Session数据是不可见的。这提供了更高的安全性，因为用户无法直接修改Session数据。
+
+**跨域：** Session数据存储在服务器端，不受同源策略的限制。可以在不同域名之间共享会话信息。
+
+**过期时间：** 通常，Session有一个过期时间，一旦超过这个时间，服务器会自动销毁该Session。
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240411224704950.png" alt="image-20240411224704950" style="zoom:50%;" />
+
+**缺点**
+
+对跨域的限制
+
+扩展性比较差
 
 
 
